--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head >Grid Drawing
+  <head>
     <link rel="stylesheet" type="text/css" href="styles.css" >
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="app.js"></script>
+    <title>Grid Drawing</title>
   </head>
   <body>
+  <h1> Grid Drawing </h1>
 
-  <div class="header">
-  
+  <div>
+
+    <button class = "button" id = "size"> Size </button>
   </div>
   <div id="wrapper"></div>
 
