adds reset functionality

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div>
 
     <button class = "button" id = "size"> Size </button>
+    <button class = "button" id = "reset">Reset</button>
   </div>
   <div id="wrapper"></div>
 
